LaTeXWriter: Use List.of() for static constant list.